- Fix auto-assigned IDs overlapping when adding vehicles.
- Fix encoding of label lists in Action0 properties.
- Fix encoding and decoding of Action 5.
- Fix `min_life` Action0 property size for houses (spec error).
- Fix `Switch` code using wrong feature for related scope.
- Fix `Switch` code grammar issues.
- Fix alpha generation when using colourkey.
- Add sprite cache.
- Fix decompilation of action 7/9 with value > 4 bytes.
- Optimize memory usage when writing NewGRF.
- Optimize grf file size by removing duplicate sprites (by data).
- Allow defining named temporary variables in `Switch` code.
- Rename zoom constants to use natural/nml order: `ZOOM_4X` -> `ZOOM_2X` -> `ZOOM_NORMAL` -> `ZOOM_OUT_2X` -> `ZOOM_OUT_4X` -> `ZOOM_OUT_8X`.
- Add `Mask`, `FileMask` and `ImageMask` classes to define sprite masks.
- Add `mode` argument to `Mask` with option to overdraw sprite.
- Add `ShipFlags` enum.
- Add support for the extended format in Action1.
- Add `main` function to handle command line arguments.
- Add some VarAction2 variables for houses.
- Add `TTDString` and `TTDIndustry` constants.
- Add `TownGrowthEffect` constants.
- Add `Eval` as a version of `Switch` without ranges.
- Add `subroutines` argument to `Switch` and allow `name()` call syntax.
- Support using StringRef in Action 0x14 (`SetProperties`).
- Support using StringRef as `NewGRF` `name` and `description`.
- Support encoding of bridge layouts.
- Support encoding of industry layouts.
- Support encoding of tile acceptance lists for houses and industry tiles.
- Support expressions for register value in PERM and TEMP access.
- Support parameter expressions for vars60+ in `Switch` code (via var7b).
- Support cropping 24bpp sprites.
- Add `preferred_blitter` argument to `NewGRF` constructor, possible values `NewGRF.BLITTER_BPP_8` and `NewGRF.BLITTER_BPP_32`.
- Add `StringManager.get_persistent_id` function to register strings in "persistent" range (0xDCxx).