@@ -1,11 +1,14 @@
+from typing import Any
+
 from . import common
 from . import va2vars
 from . import parser
+from . import colour
 
 from .grf import *
 from .constants import *
 from .vox import VoxReader, VoxFile, VoxTrainFile
-from .sprites import ResourceAction, Sprite, ImageSprite, ImageFile, FileSprite, Mask, FileMask, ImageMask, Sound, RAWSound, PaletteRemap, EMPTY_SPRITE, open_image, find_best_color, fix_palette, combine_fingerprint, ResourceFile, PythonFile
+from .sprites import ResourceAction, Sprite, ImageSprite, ImageFile, FileSprite, Mask, FileMask, ImageMask, Sound, RAWSound, PaletteRemap, EMPTY_SPRITE, open_image, fix_palette, combine_fingerprint, ResourceFile, PythonFile
 from .common import *
 from .actions import RVFlags, TrainFlags, CargoClass, train_hpi, train_ton, \
     nml_te, nml_drag, py_property, SpriteRef, SpriteLayout, SpriteLayoutList, \
@@ -16,6 +19,9 @@ from .strings import StringRef, TTDString
 from .lib import *
 from . import decompile
 from .utils import main
+from .colour import PALETTE, PIL_PALETTE, SAFE_COLOURS, ALL_COLOURS, WATER_COLOURS, DEFAULT_BRIGHTNESS, \
+    CC_COLOURS, WIN_TO_DOS, to_spectra, srgb_to_linear, linear_to_srgb, srgb_to_oklab, oklab_to_srgb, \
+    find_best_colour
 
 
 try:
@@ -29,3 +35,9 @@ except:
     except PackageNotFoundError:
         # package is not installed
         pass
+
+
+def __getattr__(name: str) -> Any:
+    if name in colour.LAZY_CONSTANT_GENERATORS:
+        return getattr(colour, name)
+    raise AttributeError(f"module {__name__!r} has no attribute {name!r}")
